# api/api/models/__init__.py
@@ -10,4 +10,5 @@ from api.models.agent_status import AgentStatus
 from api.models.api_response import ApiResponse
 from api.models.inline_response200 import InlineResponse200
 from api.models.inline_response2001 import InlineResponse2001
+from api.models.inline_response2002 import InlineResponse2002
 from api.models.list_metadata import ListMetadata
